--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+
+    <!-- Header -->
     <header>
         <nav class="container">
             <img src="img/logo.png" alt="logo">
@@ -22,9 +24,10 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <div class="container">
 
+    <main>
+        <!-- Main -->
+        <div class="container">
             <div id="slider"></div>
             <h2 id="head2">Lorem ipsum dolor sit amet, consectetur adipisicing elit</h2>
             <hr>
@@ -65,7 +68,6 @@
             </div>
             <hr>
             <div class="row">
-
                 <div class="col">
                     <h3>Social Connection</h3>
                     <hr class="dashed">
@@ -122,31 +124,30 @@
                 </div>
             </div>
         </div>
-
+      <div id="bgpart"></div>
     </main>
+    <!-- Footer -->
     <footer>
         <div class="container">
             <div class="footerleft">
-
+                <div class="footerright">
+                    <p id="firsttext" >Copyright 2010.Studio VIVROCKS.All Rights Reserved</p>
+                </div>
                 <p> Site Powered by Wordpress. Design and Developed by VIVROCKS.</p>
-                <ul class="footerlist">
-                  <li><a href="">Home</a></li>
-                  <li><a href="">About</a></li>
+                <ul id="firstlist" class="footerlist">
+                  <li><a class="first" href="">Home</a></li>
+                  <li><a href="">About</a></li> 
                   <li><a href="">Product</a></li>
                   <li><a href="">Services</a></li>
                   <li><a href="">Contact</a></li>
                 </ul>
                 <ul class="footerlist" >
-                  <li><a href="">Privacy Policy</a></li>
+                  <li><a class="first" href="">Privacy Policy</a></li>
                   <li><a href="">Terms of use</a></li>
                 </ul>
             </div>
-            <div class="footerright">
-                <p id="lasttext" >Copyright 2010.Studio VIVROCKS.All Rights Reserved</p>
-            </div>
         </div>
     </footer>
-
 </body>
 
 </html>
